--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,13 +1,273 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&family=Lato:wght@300;400&family=Poppins&display=swap');
+
+:root{
+  --white: white;
+  --grey: #D1D5DB;
+  --rose: #BE123C;
+  --gray-900: #111827;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  font-family: 'DM Sans', sans-serif;
+    overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.main {
+  height: 100vh;
+  width: 100%;
+  position: relative;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-image: url("../images//johnwick.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.999;
+  z-index: -1;
+}
+
+.main::after { 
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.541);
+  z-index: -1;
+}
+
+.navbar{
+  width: 100%;
+  height: 50px;
+  padding: 5px;
+  font-size: 15px;
+}
+.navbar nav{
+  width: 90%;
+  display: flex;
+  margin: auto;
+  align-items: center;
+  justify-content: space-between;
+}
+.search-form{
+  display: flex;
+  width: 30%;
+  padding: 2px;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 6px;
+border: 2px solid var(--grey)
+}
+.search-form form{
+  width: 90%;
+  padding: 5px;
+  outline: none;
+  border: none;
+}
+.search-form input{
+  width: 100%;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  color: var(--white);
+}
+.search-form input::placeholder{
+  color: var(--grey);
+}
+.sign-in{
+  display: flex;
+  width: 10%;
+  justify-content: space-between;
+  color: var(--white);
+}
+.sign-in p{
+  font-size: 16px;
+}
+.main-text{
+  width: 22%;
+  margin: 80px 80px;
+}
+.main-text h1{
+  color: var(--white);
+  font-size: 32px;
+  letter-spacing: 1px;
+}
+.main-text p{
+  font-size: 14px;
+  color: var(--white);
+  text-align: left;
+}
+.labels{
+  display: flex;
+  width: 75%;
+  align-items: center;
+  justify-content: space-between;
+}
+.labels span{
+  display: flex;
+  align-items: center;
+  color: var(--grey);
+  font-size: 12px;
+}
+.trailer{
+  display: flex;
+  align-items: center;
+  background-color: var(--rose);
+  width: 169px;
+  text-transform: uppercase;
+  color: var(--white);
+  font-size: 14px;
+  justify-content: space-evenly;
+  line-height: 24px;
+  border: none;
+  padding: 5px;
+  border-radius: 5px;
+}
+.featured-movies{
+  height: fit-content;
+  width: 95%;
+  margin: auto;
+  margin-bottom: 50px;
+}
+.head-text{
+  display: flex;
+  width: 96%;
+  margin: auto;
+  align-items: center;
+  justify-content: space-between;
+}
+.head-text h3{
+  color: #000;
+  font-family: 'DM Sans';
+  font-size: 25px;
+  
+}
+.head-text p{
+  font-size: 16px;
+  color: var(--rose)
+}
+.app {
+  text-align: center;
+  margin: 20px;
+}
+
+.movie-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 25px;
+}
+
+.movie-card {
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.movie-poster {
+  max-width: 100%;
+  height: auto;
+}
+
+.movie-title {
+  margin: 10px 0;
+  font-size: 16px;
+  text-align: left;
+  color: var(--gray-900);
+}
+
+.movie-release-date {
+  font-size: 14px;
+  text-align: left;
+  color: var(--grey);
+}
+.movie-labels{
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+}
+.movie-labels span{
+  display: flex;
+  align-items: center;
+  color: var(--gray-900);
+  font-size: 12px;
+}
+.footer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
+.social-icons{
+  width: 20%;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+.nav-items{
+  width: 36%;
+}
+.nav-items ul{
+  display: flex;
+  justify-content: space-between;
+}
+.nav-items ul li{
+  list-style: none;
+  font-weight: bold;
+  
+  color: var(--gray-900);
+}
+
+.attribute p{
+  color: var(--grey);
+  font-weight: bold;
+}
+@media screen and (max-width: 800px) {
+  .navbar nav{
+    width: 93%;
+    padding: 7px;
+  }
+  .navbar nav img{
+    width: 130px;
+  }
+  .search-form{
+   display: none;
+  }
+  .sign-in p{
+    display: none;
+  }
+  .main::before {
+    background-size: 100% 100%;
+    }
+    .main-text{
+      width: 80%;
+      margin: 90px 20px;
+    }
+    .footer{
+    }
+    .social-icons{
+      width: 60%;
+    }
+    .nav-items{
+      width: 100%;
+      font-size: 13px;
+    }
+    .nav-items ul{
+      width: 80%;
+      justify-content: space-between;
+    }
+    .attribute p{
+      font-size: 14px;
+    }
 }
